feat: add coupon endpoints
